--- a/2-map.html
+++ b/2-map.html
@@ -14,7 +14,7 @@
             <div id="Panzhihua">
                 <!-- http://www.china.org.cn/travel/Wild_Sichuan/2015-10/23/content_36813096.htm -->
 
-                <p><a href="images/panzhihua.jpg"> <img class="img" src="images/panzhihua.jpg"  style="height:200px;width:400px" alt> </a></p>
+                <p><a href="images/Panzhihua.jpg"> <img class="img" src="images/panzhihua.jpg"  style="height:200px;width:400px" alt> </a></p>
                 <div class="text1">Panzhihua</div>
             </div>
 
